course/hadash.jj
PARSER_BEGIN(ololo2)

public class ololo2 {
    public static void main(String[] args){
        System.out.println("ololo");
    }
}

PARSER_END(ololo2)

SKIP:  { " " | "\t" | "\n" | "\r"                    }
TOKEN: { "(" | ")" | "+" | "*" | <NUM: (["0"-"9"])+> }

void S(): {} { E() <EOF>           }
void E(): {} { T() ("+" T())*      }
void T(): {} { F() ("*" F())*      }
void F(): {} { <NUM> | "(" E() ")" }
